# badery-blog

./: .gitignore  CNAME  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  index.html  index.scss
.github/workflows/: deploy.yml
posts/: another_test.md  anotherreal.md  metadata.json  real.md  test.md  wasm.md  welcome.md
scripts/: Cargo.toml
scripts/src/: main.rs
src/: main.rs
src/components/: blog_list.rs  blog_post.rs  mod.rs  nav.rs
src/pages/: blog.rs  home.rs  mod.rs  not_found.rs  routes.rs
src/services/: handler.rs  hooks.rs  mod.rs  types.rs
