[package]
name = "badery-blog"
version = "0.1.0"
edition = "2021"
description = "A Wasm-based blog that loads and displays md files with Yew."
readme = "README.md"
repository = ""
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
markdown = "1.0.0-alpha.12"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
yew = { version="0.20", features=["csr"] }
yew-router = "0.17"
